<resources>
    <string name="app_name">LexterBeta</string>
    <string name="capture_calculator">Capture Calculator</string>
    <string name="poaching_calculator">Poaching Calculator</string>
    <string name="calculator">Calculator</string>
    <string name="hello_my_name_is_lexter_i_m_not_a_pokedex_like_my_brother_i_just_do_math_what_would_you_like_to_do">Hello, my name is Lexter. I\'m not a Pokedex like my brother. I just do math. What would you like to do?</string>
    <string name="attack_calculator">Attack Calculator</string>
    <string name="voicebox">Voicebox</string>
    <string name="enter">Enter</string>
    <string name="level_of_attacking_pokemon">Level of Attacking Pokemon</string>
    <string name="pwr_of_the_move">PWR of the Move</string>
    <string name="critical_rate_0_4">Critical Rate (0-4)</string>
    <string name="weather_impact">Weather Impact</string>
    <string name="attack_or_speacial_attack">Attack or Speacial Attack</string>
    <string name="defense_or_special_defense">Defense or Special Defense</string>
    <string name="effective_rate_5_75_1_1_25_1_5">Effective Rate (.5 .75 1.1.25 1.5)</string>
    <string name="ability_mod_5_75_1_1_25_1_5">Ability Mod (.5 .75 1.1.25 1.5)</string>
    <string name="stab">STAB</string>
    <string name="no_stab">No STAB</string>
    <string name="burn">Burn</string>
    <string name="no_burn">No Burn</string>
    <string name="burned">Burned</string>
    <string name="effective_rate_5_2">Effective Rate (.5-2)</string>
    <string name="back">Back</string>
    <string name="at_or_sp_att">At or Sp.Att</string>
    <string name="lvl_of_attacker">Lvl of Attacker</string>
    <string name="def_or_sp_def">Def or SP.Def</string>
    <string name="yo_i_m_lexter">Yo I\'m Lexter</string>
    <string name="quot_hello_my_name_is_lexter_i_m_not_a_pokedex_like_my_brother_i_just_do_math_what_can_i_do_for_you">\"Hello, my name is Lexter. I\'m not a Pokedex like my brother. I just do math. What can I do for you?</string>
    <string name="blocker">blocker</string>
    <string name="blocker2">TODO</string>
    <string name="blocker3">blocker3</string>
    <string name="blocker4">blocker4</string>
    <string name="hello_my_name_is_lexter_i_m_not_a_pokedex_like_my_brother_i_just_do_math_what_can_i_do_for_you">Hello, my name is Lexter. I\'m not a Pokedex like my brother. I just do math. What can I do for you?</string>
</resources>
